# rezi-web

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESKTOP_REBUILD_GUIDE.md  Dockerfile  LLM_INTEGRATION.md  README.md  docker-compose.yaml  docker.just  justfile
.github/workflows/: opencode.yml  verify_build_release.yml
assets/: app.css  htmx-reload.js  htmxListener.js  reply.js  rezi.txt  tailwind_plugins.js  tailwind_typography.js  theme-switcher.js  themes.css
libsql-orm/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
libsql-orm/.cargo/: config.toml
libsql-orm/libsql-orm-macros/: Cargo.toml
libsql-orm/libsql-orm-macros/src/: lib.rs
libsql-orm/src/: database.rs  error.rs  filters.rs  lib.rs  macros.rs  model.rs  pagination.rs  query.rs  tests.rs  types.rs
migrations/: README_INDEXES.md  chatmessages.sql  idx_chat_messages_is_user.sql  idx_chat_messages_sender.sql  idx_chat_messages_timestamp.sql  idx_todos_completed.sql  idx_todos_created_at.sql  idx_witch_results_owner_id.sql  idx_witch_results_owner_id_timestamp.sql  idx_witch_results_timestamp.sql  items.sql  items_indexes.sql  messages.sql  messages_indexes.sql  messages_reply.sql  recipes.sql  recipes_indexes.sql  update_todos_timestamp_trigger.sql  witch_results.sql
rumors/: Cargo.toml  MIGRATION.md  README.md
rumors/examples/: multi_provider.rs
rumors/src/: chat.rs  client.rs  google_api.rs  lib.rs  recipe_converter.rs
rumors/src/providers/: gemini.rs  mod.rs  ollama.rs
rumors/tests/: integration_tests.rs  provider_tests.rs
scrapy/: Cargo.toml
scrapy/src/: lib.rs
src/: assets.rs  auth_middleware.rs  config.rs  csv.rs  database.rs  from_headers.rs  ical.rs  llm.rs  main.rs  message.rs  oidc.rs  oidc_user.rs  pdf.rs  routes.rs  scrapy.rs  text_utils.rs  unsafe_token_decode.rs  user.rs  witch.rs
src/database/: items.rs  messages.rs  migrations.rs  mod.rs  recipes.rs
src/routes/: assets.rs  auth.rs  export.rs  items.rs  messages.rs  mod.rs  recipes.rs  technical.rs
src/view/: about.rs  chat.rs  export.rs  icons.rs  info.rs  items.rs  login.rs  message.rs  mod.rs  navbar.rs  profile.rs  recipes.rs  todolist.rs
