[package]
name = "grocy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3"
lazy_static = "1.4.0"
log = "0.4.27"
maud = { version = "0.27.0", features = ["actix-web"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
webbrowser = "1.0.5"
