[package]
name = "grocy"
version = "0.4.3"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.11.0", default-features = false, features = [
    "rustls",
    "compress-brotli",
    "http2",
    "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
libsql-client = "0.33.4"

log = "0.4.27"
maud = { version = "0.27.0", features = ["actix-web"] }
rand = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.0", features = ["full"] }
url = "2.5.4"
webbrowser = "1.0.5"
