[package]
name = "rumors"
version = "0.1.0"
edition = "2021"

[lib]
name = "rumors"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
