[package]
name = "libsql-orm-macros"
version = "0.1.1"
edition = "2021"
authors = ["Ayon Saha <ayonsaha2011@gmail.com>"]
description = "Procedural macros for libsql-orm - automatic Model trait implementation and ORM functionality"
documentation = "https://docs.rs/libsql-orm-macros"
homepage = "https://github.com/ayonsaha2011/libsql-orm"
repository = "https://github.com/ayonsaha2011/libsql-orm"
license = "MIT"
readme = "../README.md"
keywords = ["orm", "libsql", "macros", "derive", "database"]
categories = ["database", "web-programming", "development-tools::procedural-macro-helpers"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] } 
